Adds descriptions to the service pages

--- a/book.html
+++ b/book.html
@@ -48,6 +48,21 @@
 
     <!-- Page Content -->
     <div class="container p-5 p-sm-2">
+        <div class="service-description">
+            <h2>Balloon Twisting</h2>
+            <h6>Hire one of the world's top balloon artists for your event!</h6>
+            <p>A balloon twister is a fun and interactive addition to any party, 
+                entertaining guests with incredible balloon creations. It's the 
+                perfect addition to any kid's party, corporate event, or any 
+                celebrateion where you want to add a playful touch. With some 
+                fast and dazzling twists and turns, Kevin can transform a simple 
+                balloon into almost anything, from a simple sword, to a favorite 
+                animal, to an intricate character. Skilled balloon artists can captivate 
+                your guests, and children love watching their favorite animals or characters 
+                come to life before their eyes. Plus, they make excellent party favors, allowing
+                your guests to take a home a little piece of the celebration. Let Kevin bring the vibe 
+                to your party you've always wanted, and create the party everyone will be talking about</p>
+        </div>
         <form class="row">
             <div class="col-sm-6 ">
                 <h3>Tell me about your Event</h3>
