--- a/columns.html
+++ b/columns.html
@@ -46,6 +46,16 @@
 
     <!-- Page Content -->
     <div class="container p-5 p-sm-2">
+        <div class="service-description">
+            <h2>Balloon Columns</h2>
+            <p>Balloon columns are a versatile and eye-catching decoration that can add a pop of fun and excitement to any party or event. Essentially, it's a towering structure made up of dozens of balloons that are attached to a central column, creating a stunning vertical display that's sure to impress your guests.
+
+                There are many reasons why people want to have balloon columns at their parties. First and foremost, they're an excellent way to add visual interest and depth to your event decor. Whether you're celebrating a birthday, a wedding, or just a fun get-together with friends, a balloon column can help create a festive and inviting atmosphere.
+                
+                Another great thing about balloon columns is that they're incredibly versatile. You can choose from a wide range of colors, patterns, and sizes to create a design that perfectly matches your party theme and personal style. Whether you want something bright and bold, or more understated and elegant, there's a balloon column out there that's perfect for you. Make sure you ask Kevin to add some of his famous balloon twisting designs to make your columns 1 of a kind!
+                                
+                Balloon columns are a fun, versatile, and visually stunning decoration that's perfect for any party or event. Whether you're looking to add a pop of color to your decor, create a festive atmosphere, or just make your guests smile, a balloon column is a fantastic choice. So why not give it a try at your next party and see the magic for yourself?</p>
+        </div>
         <form class="row">
             <div class="col-sm-6 ">
                 <h3>Tell me about your Column</h3>
