--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                 <div class="col-8 service-text">
                     <h6>Balloon Arches</h6>
                     <p> Customized balloon arches of any size and specifications.</p>
-                    <p class="d-none d-sm-block"> Customize your arch yourself, and Kevin will have it ready for your
-                        event, exactly as you want it. <a href="arches.html">learn more</a>
+                    <p class="d-none d-sm-block"> A balloon arch adds a fun, playful element to any event and is a great way to make a statement and create a memorable photo backdrop.
+                        <a href="arches.html">learn more</a>
                     </p>
                 </div>
             </div>
@@ -174,7 +174,8 @@
                 <div class="col-8 service-text">
                     <h6>Balloon Columns</h6>
                     <p> Amaze your guests with balloon columns, short or tall</p>
-                    <p class="d-none d-sm-block">Choose a svelt quad pattern or an organic column and decorate them with Kevin's famouse balloon designs <a href="book.html">learn more</a>
+                    <p class="d-none d-sm-block">Balloon columns are a must-have at any event as they add a touch of whimsy and create an inviting atmosphere. They're versatile, customizable, and perfect for adding visual interest and depth to your party decor.
+                        <a href="book.html">learn more</a>
                     </p>
                 </div>
                 <div class="col-4 p-0 justify-content-center d-flex">
@@ -193,19 +194,20 @@
                 <div class="col-8 service-text">
                     <h6>Garlands</h6>
                     <p> Give your event that extra pizazz with a stunning balloon garland</p>
-                    <p class="d-none d-sm-block"> Get a single garland or dozens <a href="garlands.html">learn more</a>
+                    <p class="d-none d-sm-block"> A balloon garland is a fun and festive way to add color and texture to your party decor. It's versatile, customizable, and perfect for creating a photo-worthy backdrop or highlighting key areas of your event space.
+                        <a href="garlands.html">learn more</a>
                     </p>
                 </div>
             </div>
 
-           <br/>
 
             <div class="row service-row ser-yel text-right">
                 <div class="col-8 service-text">
                     <h6>Custom Centerpieces</h6>
                     <p> Kevin is a world-renowned balloon twister, capable to turning almost any idea into a balloon
                         sculpture</p>
-                    <p class="d-none d-sm-block"> <a href="book.html">learn more</a>
+                    <p class="d-none d-sm-block">A balloon centerpiece sculpture adds a fun and festive touch to any event or party, serving as a unique and eye-catching decoration that guests will love. Plus, it can be customized to fit any theme or color scheme, making it a versatile addition to any celebration.
+                        <a href="book.html">learn more</a>
                     </p>
                 </div>
                 <div class="col-4 p-0 justify-content-center d-flex">
