Tests integrating React App into html

--- a/book.html
+++ b/book.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="static/css/main.4256c54b.css">
-    <script src="static/js/main.9f51c705.js"></script>
+    
+
+
     <title>Book Now</title>
 </head>
 
@@ -63,6 +64,11 @@
                 your guests to take a home a little piece of the celebration. Let Kevin bring the vibe 
                 to your party you've always wanted, and create the party everyone will be talking about</p>
         </div>
+        <button class="booking-btn">Book Now</button>
+        <div id="booking-form"></div>
+
+
+
         <form class="row">
             <div class="col-sm-6 ">
                 <h3>Tell me about your Event</h3>
@@ -564,7 +570,8 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-    
+
+
 
 </body>
 
