--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
                                 <li><a href="garland.html">Garlands</a></li>
                                 <li><a href="column.html">Columns</a></li>
                                 <li><a href="centerpiece.html">Centerpieces</a></li>
+                                <li><a href="test.html">Test</a></li>
                             </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
